--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
 </head>
 
 <body style='margin: 0; overflow: hidden;'>
-    <a-scene
+    <!-- <a-scene
         vr-mode-ui="enabled: false"
 		embedded
-        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
+        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'> -->
+
+    <a-scene vr-mode-ui="enabled: false" embedded
+        arjs='sourceType: webcam; sourceWidth:1920; sourceHeight:1080; displayWidth: 1920; displayHeight: 1080; debugUIEnabled: true;'
+    >
         
         <a-camera gps-camera rotation-reader></a-camera>
 
-        <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: -79.672361; latitude: 43.578321;" animation-mixer/>
+        <a-entity position="0 1.5 -10" gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15"  animation-mixer/>
 	</a-scene>
+
+
+   
 </body>
