--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- <a-scene gps-camera-debug embedded arjs='sourceType: webcam; debugUIEnabled: false;'></a-scene> -->
 
         <a-camera gps-camera rotation-reader></a-camera>
-        <a-entity  gltf-model="./assets/magnemite/scene.gltf" rotation="0 50 0" scale="0.05 0.05 0.05" gps-entity-place="longitude: -79.67235216713091; latitude: 43.57831820322465;" animation-mixer/>
+        <a-entity position="0 1.25 -5" gltf-model="./assets/magnemite/scene.gltf" rotation="0 50 0" scale="0.05 0.05 0.05" gps-entity-place="longitude: -79.67235216713091; latitude: 43.57831820322465;" animation-mixer/>
         <!-- <a-entity position="0 1.25 -5" gltf-model="./assets/magnemite/scene.gltf" rotation="0 10 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: -79.67235216713091; latitude: 43.57831820322465;" animation-mixer/> -->
 	</a-scene>
 
